fixed mobile overlap

--- a/src/main/resources/static/index.css
+++ b/src/main/resources/static/index.css
@@ -293,6 +293,9 @@ html{
         font-size:63px !important;
     }
 
+   .landing-pic2{
+       padding-bottom: 150% !important;
+   }
 
 
 }
